modifying prediction tab

--- a/Deployment/Mbego/static/styles.css
+++ b/Deployment/Mbego/static/styles.css
@@ -1,4 +1,4 @@
-/* Diabetes-Themed Styles */
+/* */
 body {
     font-family: 'Arial', sans-serif;
     background: linear-gradient(to right, #b3d9ff, #ffffff);
